@@ -1,10 +1,11 @@
 package jadx.gui.utils;
 
-import javax.swing.*;
 import java.awt.*;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
 import java.util.Map;
+
+import javax.swing.*;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -16,7 +17,7 @@ public class Link extends JLabel implements MouseListener {
 
 	private static final Logger LOG = LoggerFactory.getLogger(Link.class);
 
-	private String url;
+	private final String url;
 
 	public Link(String text, String url) {
 		super(text);
@@ -66,16 +67,22 @@ public class Link extends JLabel implements MouseListener {
 		try {
 			String os = System.getProperty("os.name").toLowerCase();
 			if (os.contains("win")) {
-				Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
+				new ProcessBuilder()
+						.command(new String[] { "rundll32", "url.dll,FileProtocolHandler", url })
+						.start();
 				return;
 			}
 			if (os.contains("mac")) {
-				Runtime.getRuntime().exec("open " + url);
+				new ProcessBuilder()
+						.command(new String[] { "open", url })
+						.start();
 				return;
 			}
 			Map<String, String> env = System.getenv();
 			if (env.get("BROWSER") != null) {
-				Runtime.getRuntime().exec(env.get("BROWSER") + " " + url);
+				new ProcessBuilder()
+						.command(new String[] { env.get("BROWSER"), url })
+						.start();
 				return;
 			}
 		} catch (Exception e) {
